--- a/predictor.ipynb
+++ b/predictor.ipynb
@@ -11,7 +11,10 @@
     "from keras.layers import Conv2D, MaxPooling2D\n",
     "from keras.layers import Activation, Dropout, Flatten, Dense\n",
     "from keras.preprocessing.image import ImageDataGenerator,load_img,img_to_array\n",
-    "imput_h=15"
+    "input_h=150\n",
+    "batch_size = 100\n",
+    "import pprint\n",
+    "pp=pprint.pprint"
    ]
   },
   {
@@ -21,20 +24,53 @@
    "outputs": [],
    "source": [
     "\n",
-    "model=  MyModel().get_model(imput_h)\n",
+    "model=  MyModel().get_model(input_h)\n",
     "model.load_weights('first_try.h5')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 150 images belonging to 3 classes.\n"
+     ]
+    }
+   ],
    "source": [
+    "#val data generator\n",
     "val_datagen = ImageDataGenerator(rescale=1. / 255)\n",
     "    # this is a similar generator, for validation data\n",
     "validation_generator = val_datagen.flow_from_directory(\n",
     "        '../data/valid',\n",
+    "        target_size=(input_h, input_h),\n",
+    "        batch_size=batch_size,\n",
+    "        class_mode=None,\n",
+    "        seed=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 600 images belonging to 3 classes.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#test data generator\n",
+    "test_datagen = ImageDataGenerator(rescale=1./255)\n",
+    "test_generator=test_datagen.flow_from_directory(\n",
+    "        '../data/test',\n",
     "        target_size=(input_h, input_h),\n",
     "        batch_size=batch_size,\n",
     "        class_mode='categorical')"
@@ -42,16 +78,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.65499999125798547"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "test_datagen = ImageDataGenerator(rescale=1./255)\n",
-    "test_generator=test_datagen.flow_from_directory(\n",
-    "        '../data/valid',\n",
-    "        target_size=(imput_h, imput_h),\n",
-    "        batch_size=100,\n",
-    "        class_mode=None)"
+    "score=model.evaluate_generator(test_generator)\n",
+    "score[1]"
    ]
   },
   {
@@ -60,28 +103,81 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "img =load_img(\"../data/test/nevus/ISIC_0012551.jpg\", target_size=(input_h, input_h))\n",
-    "x = img_to_array(img)\n",
-    "x=x.reshape((1,150,150,3))\n",
-    "pred=model.predict(x)\n",
-    "print(pred)\n",
-    "score=model.evaluate_generator(test_generator)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#print(score[1])\n",
-    "preds=model.predict_generator(test_generator,verbose=0)\n",
-    "ans_1st=zip(test_generator.filenames,preds)\n",
+    "print(validation_generator.class_indices)\n",
     "import pandas as pd\n",
-    "#df=pd.read_table(preds)\n",
-    "#print(df)\n",
-    "print(preds)"
+    "df= pd.DataFrame(columns=['Id','task_1','task_2'])\n",
+    "Id=list()\n",
+    "task1=list()\n",
+    "task2=list()\n",
+    "for filename in validation_generator.filenames:\n",
+    "    fullpath=validation_generator.directory+\"/\"+filename\n",
+    "    img =load_img(fullpath, target_size=(input_h, input_h))\n",
+    "    x = img_to_array(img)\n",
+    "    x=x/255\n",
+    "    x = x.reshape((1,) + x.shape)\n",
+    "    pred=model.predict(x)\n",
+    "    filename_for_csv=\"data/test/\"+filename\n",
+    "    Id.append(filename_for_csv)\n",
+    "    \n",
+    "    task1.append(pred[0][0])\n",
+    "    task2.append(pred[0][2])\n",
+    "    df=df.append(pd.DataFrame({'Id':Id,'task_1':task1,'task_2':task2}))\n",
+    "    \n",
+    "df.to_csv('sample.csv',index=False)\n",
+    "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'seborrheic_keratosis': 2, 'nevus': 1, 'melanoma': 0}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(test_generator.class_indices)\n",
+    "import pandas as pd\n",
+    "df= pd.DataFrame(columns=['Id','task_1','task_2'])\n",
+    "Id=list()\n",
+    "task1=list()\n",
+    "task2=list()\n",
+    "for filename in test_generator.filenames:\n",
+    "    fullpath=test_generator.directory+\"/\"+filename\n",
+    "    img =load_img(fullpath, target_size=(input_h, input_h))\n",
+    "    x = img_to_array(img)\n",
+    "    x=x/255\n",
+    "    x = x.reshape((1,) + x.shape)\n",
+    "    pred=model.predict(x)\n",
+    "    filename_for_csv=\"data/test/\"+filename\n",
+    "    Id.append(filename_for_csv)\n",
+    "    \n",
+    "    task1.append(pred[0][0])\n",
+    "    task2.append(pred[0][2])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1= pd.DataFrame(columns=['Id','task_1','task_2'])\n",
+    "df1=df1.append(pd.DataFrame({'Id':Id,'task_1':task1,'task_2':task2}))\n",
+    "df1.to_csv('sample.csv',index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
